tests/cli/snapshots/help_snapshots_test__subcommand_patch_help.snap
---
source: tests/cli/help_snapshots_test.rs
expression: "help_output(&[subcommand, \"--help\"])"
---
Apply a batch of structured workbook edit operations.

Usage: xmind patch [OPTIONS] --ops <OPS> <--dry-run|--apply> <WORKBOOK>

Arguments:
  <WORKBOOK>  Path to the .xmind workbook

Options:
      --ops <OPS>                  YAML or JSON file containing patch operations
      --dry-run                    Preview the change without writing the workbook
      --apply                      Write the change to the workbook
      --backup                     Create a safety backup before applying changes
      --json                       Emit a JSON command envelope
      --format <FORMAT>            Select the human or machine-readable output format [default: text] [possible values: text, json, compact-json, markdown, outline, assets]
      --fields <FIELDS>            Limit JSON output to comma-separated field paths
      --quiet                      Suppress non-essential text output
      --no-color                   Disable ANSI color in text output
      --sheet <SHEET>              Select a sheet by title
      --sheet-id <SHEET_ID>        Select a sheet by stable id
      --sheet-index <SHEET_INDEX>  Select a sheet by zero-based index
  -h, --help                       Print help

Examples:
  xmind patch roadmap.xmind --ops patch.yaml --dry-run
  xmind patch roadmap.xmind --ops patch.json --apply --backup
  xmind patch roadmap.xmind --ops docs/examples/patch-add-tree.yaml --dry-run --json
