tests/cli/snapshots/help_snapshots_test__subcommand_set_help.snap
---
source: tests/cli/help_snapshots_test.rs
expression: "help_output(&[subcommand, \"--help\"])"
---
Usage: xmind set [OPTIONS] --node <NODE> <--dry-run|--apply> <WORKBOOK>

Arguments:
  <WORKBOOK>  

Options:
      --node <NODE>                    
      --title <TITLE>                  
      --note <NOTE>                    
      --append-note <APPEND_NOTE>      
      --set-labels <SET_LABELS>        
      --add-label <ADD_LABEL>          
      --remove-label <REMOVE_LABEL>    
      --set-markers <SET_MARKERS>      
      --add-marker <ADD_MARKER>        
      --remove-marker <REMOVE_MARKER>  
      --hyperlink <HYPERLINK>          
      --clear <FIELD>                  
      --dry-run                        
      --apply                          
      --backup                         
      --json                           
      --format <FORMAT>                [default: text] [possible values: text, json, compact-json, markdown, outline, assets]
      --fields <FIELDS>                
      --quiet                          
      --no-color                       
      --sheet <SHEET>                  
      --sheet-id <SHEET_ID>            
      --sheet-index <SHEET_INDEX>      
  -h, --help                           Print help
