tests/cli/snapshots/help_snapshots_test__subcommand_validate_help.snap
---
source: tests/cli/help_snapshots_test.rs
expression: "help_output(&[subcommand, \"--help\"])"
---
Check whether a workbook can be read and safely processed.

Usage: xmind validate [OPTIONS] <WORKBOOK>

Arguments:
  <WORKBOOK>  Path to the .xmind workbook

Options:
      --strict                     Treat warnings as validation failures
      --json                       Emit a JSON command envelope
      --format <FORMAT>            Select the human or machine-readable output format [default: text] [possible values: text, json, compact-json, markdown, outline, assets]
      --fields <FIELDS>            Limit JSON output to comma-separated field paths
      --quiet                      Suppress non-essential text output
      --no-color                   Disable ANSI color in text output
      --sheet <SHEET>              Select a sheet by title
      --sheet-id <SHEET_ID>        Select a sheet by stable id
      --sheet-index <SHEET_INDEX>  Select a sheet by zero-based index
  -h, --help                       Print help

Examples:
  xmind validate roadmap.xmind
  xmind validate roadmap.xmind --strict --json
